# VL2D

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
docs/: architecture.md  provider-integration.md
src/vl2d/: __init__.py  cli.py  config.py  db.py  doctor.py  domain.py  exporter.py  media.py  models.py  pipeline.py  schemas.py  services.py  storage.py  text.py  video_formats.py
src/vl2d/api/: __init__.py  app.py
src/vl2d/providers/: __init__.py  base.py  mock.py  paddle_ocr.py  paddleocr_vl.py  semamba.py  silero.py  tesseract_ocr.py
src/vl2d/worker/: __init__.py  runner.py
tests/: conftest.py  test_api.py  test_cli.py  test_doctor.py  test_paddle_ocr_provider.py  test_registry.py  test_tesseract_provider.py  test_text.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts.timestamp-1774626552833.js
web/src/: App.tsx  index.css
web/src/components/: StatusBadge.tsx
web/src/lib/: api.ts
